# opportunistic-leak-detection

./: .gitignore  CLAUDE.md  IMPROVEMENT_PLAN.md  README.md  config.py  main.py  pyproject.toml
.claude/: settings.json
.streamlit/: config.toml
data/: facility_layout.py  interfaces.py  mock_data.py  state_io.py  weather.py
data/samples/: path.csv  sources.json  wind_distribution.json  wind_scenarios.json
docs/: algorithms.md  validation_results.md
experiments/: run_sensitivity_analysis.py  run_strategy_comparison.py
models/: bayesian.py  detection.py  gaussian_plume.py  measurement.py  prior.py
optimization/: campaign.py  information_gain.py  metrics.py  multi_worker.py  opportunity_map.py  tasking.py
pages/: worker_guidance.py
tests/: conftest.py  test_bayesian.py  test_campaign.py  test_data_interfaces.py  test_detection.py  test_ensemble.py  test_file_data_provider.py  test_gaussian_plume.py  test_information_gain.py  test_integration.py  test_multi_worker.py  test_opportunity_map.py  test_phase9_gaps.py  test_plots.py  test_prior.py  test_state_io.py  test_synthetic_twin.py  test_tasking.py  test_temporal.py  test_weather.py
validation/: metrics.py  scenarios.py  synthetic_twin.py
visualization/: compass_widget.py  plots.py
